Fix tab content overflow by preventing adding excess tabs.

--- a/css/chrome-tabs-dark-theme.styl
+++ b/css/chrome-tabs-dark-theme.styl
@@ -6,13 +6,13 @@ activeTabBackgroundColor = #323639
 
   .new-tab-button-wrapper
     .new-tab-button
-      color: rgba(200, 200, 200, .5)
+      color rgba(200, 200, 200, .5)
 
       &:hover
-        background: rgba(154, 160, 166, 0.25)
+        background rgba(154, 160, 166, .25)
 
   .chrome-tab
-    
+
     .chrome-tab-dividers
 
       &::before, &::after
