--- a/css/chrome-tabs.styl
+++ b/css/chrome-tabs.styl
@@ -19,34 +19,34 @@ activeTabBackgroundColor = #fff
     font inherit
   
   .new-tab-button-wrapper
-    display: inline-flex
-    align-items: center
-    justify-content: center
-    margin-left: 0
+    display inline-flex
+    align-items center
+    justify-content center
+    margin-left 0
     
     .new-tab-button
-      height: 30px
-      width: 30px
-      line-height: 0
-      border-radius: 50%
-      font-weight: 100
-      font-size: 16px
-      padding: 0
-      border: none
-      background: none
-      color: #555
-      box-shadow: none
-      transition: background 0.35s
+      height 30px
+      width 30px
+      line-height 0
+      border-radius 50%
+      font-weight 100
+      font-size 16px
+      padding 0
+      border none
+      background none
+      color #555
+      box-shadow none
+      transition background .35s
       cursor default
 
       &:hover
-        background: rgba(150, 150, 150, 0.25)
+        background rgba(150, 150, 150, .25)
 
   .chrome-tabs-content
     position relative
     width 100%
     height 100%
-    transition: width 0.1s
+    transition width .1s
 
   .chrome-tab
     position absolute
